# OCR

./: README.md  pyproject.toml
ocr/: config.py  enums.py  main.py  utils.py
ocr/api/: api.py
ocr/api/v1/endpoint/: deneme.py
ocr/docker/: Dockerfile
ocr/modules/: combolist.py  credit_card.py  date.py  domain.py  email.py  hash.py  id.py  phone_num.py  plate.py  url.py
tests/: credit_card_test.py  date_test.py  domain_test.py  email_test.py  hash_test.py  id_test.py  phone_num_test.py  plate_tast.py  url_test.py
